[package]
name = "manager"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/floss-uz/awesome"
repository = "https://github.com/floss-uz/awesome"
description = "An awesome repository for Floss Uzbekistan"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]

# Dependencies that will included with final binary
[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive", "string"] }
cursive = { version = "0.21.1", features = ["crossterm-backend", "toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
